<resources>
    <string name="app_name">BKKP Mobile</string>
    <string name="app_desc">Balai Kesehatan Kerja Pelayaran</string>
    <string name="ver_name">Version 3.0.0</string>
    <string name="description">Indonesia Seafarer Database</string>
    <string name="emptylist">Data not found</string>
    <string name="menu_home">News</string>
    <string name="news">Latest News</string>
    <string name="menu_pelaut">Find Seafarer</string>
    <string name="menu_rsku">Find Hospital</string>
    <string name="menu_pendaftaran">Checkup Registration</string>
    <string name="cari_pelaut">Find Seafarer</string>
    <string name="cari_rs">Find Hospital / Klinik Utama</string>
    <string name="pendaftaran">Checkup Registration</string>
    <string name="loading">Loading...</string>
    <string name="loading2">Please wait...</string>
    <string name="form_pendaftaran">Registration Forms</string>
    <string name="klinik">Choose Klinik BKKP</string>
    <string name="cari">Search</string>
    <string name="btn_ok">OK</string>
    <string name="btn_send">Send</string>
    <string name="btn_save">Save</string>
    <string name="btn_save2">Save</string>
    <string name="btn_search">Search</string>
    <string name="btn_history">Queue</string>
    <string name="enter_bst">Please enter your BST number:</string>
    <string name="enter_bst10">Please enter seafarer code (first 10 digit BST)</string>
    <string name="enter_email">Please enter your e-mail address:</string>
    <string name="bst">Seafarer BST</string>
    <string name="dob">Your date of birth:</string>
    <string name="mcu_date">Checkup Date</string>
    <string name="phone">Active number that can be contacted :</string>
    <string name="chphoto">Change Photo</string>
    <string name="profile">Seafarer Data</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="marital1">Married</string>
    <string name="marital2">Single</string>
    <string name="age">Too young, enter your birthday correctly</string>
    <string name="no_internet1">Turn on your internet then swipe down to refresh</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="done">Completed</string>
    <string name="active">Active</string>
    <string name="success">You already have a queue number</string>
    <string name="queue_number">Your Queue Number</string>
    <string name="ancol">Sorry KU BKKP Ancol currently not available</string>
    <string name="antrian_no">Queue No.</string>
    <string name="no_antrian">Queue Number</string>
    <string name="tindakan">Checkup Registration</string>
    <string name="pilih_tgl_mcu">Choose checkup date</string>
    <string name="phone_required1">Your mobile phone number</string>
    <string name="phone_required2">Please make sure your phone is active and is ready to receive SMS for confirmation</string>
    <string name="phone_required3">Your mobile phone number. Please make sure your phone is active and is ready to receive SMS for confirmation</string>
    <string name="hint_input_date"> </string>
    <string name="hint_password">Password</string>
    <string name="hint_password_retype">Re-type password</string>
    <string name="hint_password_rule">Password must be at least 5 characters long and contain no spaces</string>
    <string name="hint_bst">BST</string>
    <string name="hint_bst_16">BST (16 digit)</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_account">Seafarer Data</string>
    <string name="hint_nama">Full Name</string>
    <string name="hint_alamat">Address</string>
    <string name="hint_pob">Place of Birth</string>
    <string name="hint_dob">Birth of Date</string>
    <string name="hint_ktp">ID Number</string>
    <string name="hint_jk">Sex</string>
    <string name="hint_agama">Religion</string>
    <string name="hint_marital">Status</string>
    <string name="hint_foto">Photo</string>
    <string name="hint_company">Company Name</string>
    <string name="hint_change_bst">Please return to the previous page to change BST</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="btn_done">Done</string>
    <string name="btn_sign_in">Login</string>
    <string name="btn_register">Don\'t have an account? Register here</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_order">Make An Appointment</string>
    <string name="btn_cancel">Cancel Queue</string>
    <string name="btn_cancel2">Cancel</string>
    <string name="register">Register Your New Account</string>
    <string name="email">E-Mail address</string>
    <string name="login_required">Please login first</string>
    <string name="complete_data">Please complete your seafarer data first</string>
    <string name="unreachable">Cannot reach BKKP server. Please check your internet connection.</string>
    <string name="phone_mandatory">Phone number is required</string>
    <string name="phone_valid">Enter a valid phone number</string>
    <string name="phone_same">Tidak bisa mengganti nomor ponsel yang sama</string>
    <string name="id_mandatory">ID Number is required</string>
    <string name="id_16digit">Enter 16 digit ID Number</string>
    <string name="profile_mandatory">Field name, place of birth and address is required</string>
    <string name="btn_forgetpass">Forget Password</string>
    <string name="btn_resetpass">Reset Password</string>
    <string name="btn_getsms">Submit Request</string>
    <string name="btn_lang_id">Bahasa Indonesia</string>
    <string name="btn_lang_en">English</string>
    <string name="exit1">Logout</string>
    <string name="exit2">Are you sure you want to logout from this account?</string>
    <string name="no_internet2">Please check your internet connection</string>
    <string name="err_msg_password">Input password</string>
    <string name="err_msg_password_retype">Re-type password</string>
    <string name="err_msg_bst">Input your BST</string>
    <string name="err_msg_bst2">BST number is not valid</string>
    <string name="err_msg_email">Email is mandatory with correct format</string>
    <string name="detail_antrian">Queue Detail</string>
    <string name="daftar_antrian">Checkup Scheduling</string>
    <string name="keyword">Please enter the keyword</string>
    <string name="certnum">Certificate Number</string>
    <string name="expdate">Expiry Date</string>
    <string name="position">Position</string>
    <string name="exitapp">press again to exit</string>
    <string name="welcome">Welcome! To make an appointment for your medical checkup at Klinik BKKP, please tap login below. You will be able to create your login account in the next screen.</string>
    <string name="welcome_loggedin">Welcome! To make an appointment for your medical checkup at Klinik BKKP, please input your seafarer code (first 10 digit BST).</string>
    <string name="otp_4digit">Enter 4 digits OTP code</string>
    <string name="confirm">Confirm</string>
    <string name="confirmotp">Verify</string>
    <string name="confirm_txt">Are you sure the data entered is correct?</string>
    <string name="confirm_txt1">Are you sure you will make an appointment for inspection on&#160;</string>
    <string name="confirm_txt2">Change your phone number</string>
    <string name="confirm_txt3">Please check your SMS inbox and enter the OTP (one-time password) code below:</string>
    <string name="txt_msg">Please enter your BST number and password!</string>
    <string name="di">&#160;at&#160;</string>
    <string name="msg_txt">Your phone number changed successfully.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
<<<<<<< HEAD
    <string name="txtprofile">Profile</string>
    <string name="profile1">Seafarer Name</string>
    <string name="profile2">Place / Date of Birth</string>
    <string name="profile3">Gender</string>
    <string name="profile4">Religion</string>
    <string name="profile5">Nationality</string>
    <string name="profile6">Marital Status</string>
    <string name="profile7">Address</string>
    <string name="txtcert">Certificate Status</string>
    <string name="cert1">Most Recent Request Status</string>
    <string name="cert2">Location / Date of Medical Examination</string>
    <string name="cert3">Date of Medical Input / Last Update</string>
    <string name="cert4">Position</string>
    <string name="cert5">Certificate Number</string>
    <string name="cert6">Certificate Serial Number</string>
    <string name="cert7">Expiration of Validity</string>
=======
>>>>>>> bf25cb751f4cc992e6de58b8b17607974d00cca2
    <string name="input_anamnese">Input Anamnese</string>
    <string name="anamnese">Anamnese</string>
    <string name="anamnese_title">If you have ever suffered from any of the following diseases, please tick the box provided</string>
    <string name="q1">Eyevision problem</string>
    <string name="q2">High blood pressure</string>
    <string name="q3">Heart / vascular disease</string>
    <string name="q4">Heart surgery</string>
    <string name="q5">Varicose veins / piles</string>
    <string name="q6">Asthma / bronchitis</string>
    <string name="q7">Blood disorder</string>
    <string name="q8">Diabetes</string>
    <string name="q9">Thyroid problem</string>
    <string name="q10">Digestive disorder</string>
    <string name="q11">Kidney / urinary tract problem</string>
    <string name="q12">Skin problem</string>
    <string name="q13">Allergies</string>
    <string name="q14">Infectious / contagious disease</string>
    <string name="q15">Hernia</string>
    <string name="q16">Genital disease</string>
    <string name="q17">Pregnancy</string>
    <string name="q18">Sleep disorder</string>
    <string name="q19">Do you smoke, use alcohol or drugs?</string>
    <string name="q20">Operation / surgery</string>
    <string name="q21">Epilepsy / seizures</string>
    <string name="q22">Dizzines</string>
    <string name="q23">Unconcius / fainting</string>
    <string name="q24">Psychiatric problem</string>
    <string name="q25">Depression</string>
    <string name="q26">Attempted suicide</string>
    <string name="q27">Loss of memory</string>
    <string name="q28">Balance problem</string>
    <string name="q29">Severe headache</string>
    <string name="q30">Ear / nose / throat problem</string>
    <string name="q31">Restricted mobility</string>
    <string name="q32">Back or joint problem</string>
    <string name="q33">Amputation</string>
    <string name="q34">Fractures / dislocations</string>
</resources>
